--- a/styles/about-styles/about.css
+++ b/styles/about-styles/about.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /*Resets*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 html,
 body {
   scroll-behavior: smooth;
@@ -41,9 +43,821 @@ img {
 }
 
 /*Colors Variables*/
+/*Resets*/
+html,
+body {
+  scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  padding: 0%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+* {
+  margin: 0%;
+  padding: 0%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+section {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+  width: 100%;
+}
+
+.container {
+  height: inherit;
+  margin: 0% auto;
+}
+
+/*Colors Variables*/
+.header-section {
+  width: 100%;
+  height: 150px;
+}
+
+.header-section .container {
+  width: 92%;
+  margin: 0% auto;
+  height: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-section .container .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.header-section .container .logo a {
+  font-size: 50px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.header-section .container .logo span {
+  font-size: 10px;
+  font-weight: bold;
+  color: #f8bd59;
+}
+
+.header-section .container .handBurger {
+  color: black;
+  width: 25px;
+  height: 25px;
+  display: none;
+}
+
+.header-section .container .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-section .container .nav-links li {
+  margin: 0 34px;
+}
+
+.header-section .container .nav-links li a {
+  font-weight: bold;
+  color: #fff;
+}
+
+.header-section .container .nav-links li.active {
+  background-color: #f8bd59;
+  color: #fff;
+  padding: 70px 45px;
+}
+
+/*Desktop Media Quries Starts*/
+@media only screen and (min-width: 1600px) {
+  .header-section .container .logo a {
+    font-size: 60px;
+  }
+  .header-section .container .logo a span {
+    font-size: 15px;
+  }
+  .header-section .container .nav-links li a {
+    font-size: 21px;
+  }
+}
+
+/*Desktop Media Quries Ends*/
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .header-section {
+    width: 100%;
+    overflow: hidden;
+  }
+  .header-section .container {
+    width: 90%;
+    height: inherit;
+  }
+  .header-section .container .logo {
+    z-index: 3;
+  }
+  .header-section .container .logo a {
+    font-size: 30px;
+  }
+  .header-section .container .logo a span {
+    font-size: 7px;
+  }
+  .header-section .container .handBurger {
+    display: block;
+    z-index: 3;
+  }
+  .header-section .container .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #000;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    opacity: 0;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    z-index: 2;
+    padding: 61% 0 41%;
+  }
+  .header-section .container .nav-links li.active {
+    padding: 0%;
+    background-color: black;
+  }
+  .header-section .container .nav-links.open {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    z-index: 2;
+  }
+}
+
+/*Normal iphone 6 / x ends*/
+/*Iphone se (Small devices) starts*/
+/*Iphone se (Small devices) ends*/
+/*Resets*/
+html,
+body {
+  scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  padding: 0%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+* {
+  margin: 0%;
+  padding: 0%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+section {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+  width: 100%;
+}
+
+.container {
+  height: inherit;
+  margin: 0% auto;
+}
+
+/*Colors Variables*/
+.footer {
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.footer .container {
+  width: 95%;
+  height: inherit;
+  margin: 0% auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer .container .top {
+  width: inherit;
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .container .top .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  width: 33.3%;
+  margin-left: 80px;
+}
+
+.footer .container .top .logo a {
+  font-size: 50px;
+  font-weight: bold;
+  color: #000;
+}
+
+.footer .container .top .logo span {
+  font-size: 10px;
+  font-weight: bold;
+  color: #f8bd59;
+}
+
+.footer .container .top .nav-links {
+  width: 33.3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .container .top .nav-links li {
+  margin: 0 34px;
+}
+
+.footer .container .top .nav-links li a {
+  font-weight: bold;
+  color: #000;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.footer .container .top .nav-links li a:hover {
+  color: #f8bd59;
+}
+
+.footer .container .top .social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 33.3%;
+}
+
+.footer .container .top .social-links a img {
+  width: 45px;
+  height: 45px;
+  margin: 0px 12px;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.footer .container .top .social-links a img:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+
+.footer .container .bottom {
+  width: inherit;
+  height: 50%;
+  margin-left: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer .container .bottom .wrapper {
+  width: inherit;
+  height: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .container .bottom .wrapper .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 33.3%;
+}
+
+.footer .container .bottom .wrapper .card img {
+  width: 45px;
+  height: 45px;
+  margin-bottom: 20px;
+}
+
+.footer .container .bottom .wrapper .card .special-image {
+  width: 45px;
+  height: 47px;
+}
+
+/*Desktop Media Quries Starts*/
+@media only screen and (min-width: 1600px) {
+  .footer .container {
+    width: 90%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer .container .top {
+    margin-bottom: 50px;
+  }
+  .footer .container .top .logo a {
+    font-size: 60px;
+  }
+  .footer .container .top .logo a span {
+    font-size: 15px;
+  }
+  .footer .container .top .nav-links li a {
+    font-size: 20px;
+  }
+  .footer .container .top .social-links a img {
+    width: 50px;
+    height: 50px;
+  }
+  .footer .container .bottom {
+    margin-left: 100px;
+  }
+  .footer .container .bottom .wrapper .card a {
+    font-size: 21px;
+  }
+  .footer .container .bottom .wrapper .card .special-image {
+    width: 60px;
+    height: 67px;
+  }
+  .footer .container .bottom .wrapper .card img {
+    width: 50px;
+    height: 57px;
+  }
+}
+
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .footer {
+    padding: 50px 0;
+    height: auto;
+  }
+  .footer .container {
+    width: 95%;
+  }
+  .footer .container .top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    height: 50%;
+  }
+  .footer .container .top .logo {
+    margin-left: 0%;
+    padding-bottom: 35px;
+  }
+  .footer .container .top .social-links {
+    padding-bottom: 35px;
+  }
+  .footer .container .top .nav-links {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 35px;
+  }
+  .footer .container .top .nav-links li {
+    margin: 0 14px;
+  }
+  .footer .container .top .nav-links li a {
+    font-size: 14px;
+  }
+  .footer .container .bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 50px;
+    width: 100%;
+    height: 50%;
+    margin-left: 0%;
+  }
+  .footer .container .bottom a {
+    font-size: 10px;
+  }
+  .footer .container .bottom .wrapper {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .footer .container .bottom .wrapper .card {
+    text-align: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .footer .container .bottom .wrapper .card img {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 40px;
+  }
+  .footer .container .bottom .wrapper .card .special-image {
+    width: 35px;
+    height: 42px;
+    margin-bottom: 31px;
+  }
+}
+
+/*Normal iphone 6 / x ends*/
+/*Iphone se (Small devices) starts*/
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .footer .container .top .nav-links li {
+    margin: 0 8px;
+  }
+  .footer .container .top .nav-links li a {
+    font-size: 14px;
+  }
+  .footer .container .top .social-links a img {
+    width: 40px;
+    height: 40px;
+    margin: 0px 10px;
+  }
+  .footer .container .bottom .wrapper .card img {
+    height: 41px;
+    margin-bottom: 33px;
+  }
+  .footer .container .bottom a {
+    font-size: 9px;
+  }
+}
+
+/*Iphone se (Small devices) ends*/
 /*Laptop media queries starts*/
+.wrapper-section {
+  background-image: url(../../images/Gallery/banner-image.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.wrapper-section .bg-layer {
+  background-color: #525151c0;
+  width: 100%;
+  height: 100vh;
+}
+
+.hero-section {
+  padding-top: 80px;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+}
+
+.hero-section .container {
+  width: 70%;
+  margin: 0% auto;
+  height: inherit;
+}
+
+.hero-section .container .flex-wrapper {
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-section .container .flex-wrapper h1 {
+  font-size: 65px;
+  font-weight: bolder;
+  margin-bottom: 58px;
+  color: #fff;
+}
+
+.hero-section .container .flex-wrapper h1 span {
+  color: #f8bd59;
+}
+
+.hero-section .container .flex-wrapper h2 {
+  margin-bottom: 105px;
+  max-width: 900px;
+  text-align: center;
+  font-weight: 500;
+  line-height: 35px;
+  color: #fff;
+}
+
+.hero-section .container .flex-wrapper .btn {
+  padding: 34px 58px;
+  background-color: #f8bd59;
+  color: #fff;
+  border-radius: 7px;
+  font-weight: bolder;
+  font-size: 15px;
+}
+
+.main-section {
+  background-color: #eee;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+}
+
+.main-section .container {
+  width: 89%;
+  height: inherit;
+  margin: 0% auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-section .container .top,
+.main-section .container .bottom {
+  width: inherit;
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.main-section .container .top .left,
+.main-section .container .bottom .left {
+  width: 50%;
+}
+
+.main-section .container .top .right,
+.main-section .container .bottom .right {
+  width: 50%;
+}
+
+.main-section .container .top {
+  margin-bottom: 130px;
+}
+
+.main-section .container .top .left {
+  color: #000;
+}
+
+.main-section .container .top .left h1 {
+  font-size: 25px;
+  font-weight: bolder;
+  margin-bottom: 35px;
+}
+
+.main-section .container .top .left h1 span {
+  color: #f8bd59;
+}
+
+.main-section .container .top .left h2,
+.main-section .container .top .left h3 {
+  max-width: 600px;
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 30px;
+  line-height: 25px;
+}
+
+.main-section .container .top .left h3 {
+  margin-bottom: 50px;
+}
+
+.main-section .container .top .left .btn {
+  padding-top: 35px;
+  width: 300px;
+  height: 58px;
+  padding: 20px 40px;
+  cursor: pointer;
+  font-size: 15px;
+  background-color: #f8bd59;
+  color: #fff;
+  font-weight: bolder;
+}
+
+.main-section .container .bottom {
+  color: #000;
+}
+
+.main-section .container .bottom .left .ceo-image {
+  width: 500px;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.main-section .container .bottom .right {
+  color: #000;
+}
+
+.main-section .container .bottom .right h1 {
+  font-size: 25px;
+  font-weight: bolder;
+  margin-bottom: 35px;
+}
+
+.main-section .container .bottom .right h1 span {
+  color: #f8bd59;
+}
+
+.main-section .container .bottom .right h2,
+.main-section .container .bottom .right h3 {
+  max-width: 600px;
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 30px;
+  line-height: 25px;
+}
+
+.main-section .container .bottom .right h3 {
+  margin-bottom: 50px;
+}
+
+.main-section .container .bottom .right .btn {
+  padding-top: 35px;
+  width: 300px;
+  height: 58px;
+  padding: 20px 40px;
+  cursor: pointer;
+  font-size: 15px;
+  background-color: #f8bd59;
+  color: #fff;
+  font-weight: bolder;
+}
+
+.main-section .container .bottom .social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.main-section .container .bottom .social-links a img {
+  width: 45px;
+  height: 45px;
+  margin: 0px 12px;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.main-section .container .bottom .social-links a img:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+
 /*Laptop media queries ends*/
 /*Desktop Media Quries Starts*/
+@media only screen and (min-width: 1600px) {
+  .wrapper-section {
+    height: 70vh;
+  }
+  .hero-section .container .flex-wrapper h1 {
+    font-size: 70px;
+  }
+  .hero-section .container .flex-wrapper h2 {
+    max-width: 982px;
+    font-size: 26px;
+  }
+  .hero-section .container .flex-wrapper .btn {
+    font-size: 20px;
+  }
+  .main-section .container .top .left h1,
+  .main-section .container .top .right h1,
+  .main-section .container .bottom .left h1,
+  .main-section .container .bottom .right h1 {
+    font-size: 28px;
+  }
+  .main-section .container .top .left h2,
+  .main-section .container .top .left h3,
+  .main-section .container .top .right h2,
+  .main-section .container .top .right h3,
+  .main-section .container .bottom .left h2,
+  .main-section .container .bottom .left h3,
+  .main-section .container .bottom .right h2,
+  .main-section .container .bottom .right h3 {
+    max-width: 661px;
+    font-size: 17px;
+    line-height: 29px;
+  }
+  .main-section .container .top .left .btn {
+    font-size: 17px;
+  }
+  .main-section .container .bottom .left .ceo-image {
+    width: 611px;
+    height: 387px;
+  }
+}
+
 /*Desktop Media Quries Ends*/
 /*Normal iphone 6 / x Starts*/
 /*Normal iphone 6 / x ends*/
