--- a/styles/about-styles/about.scss
+++ b/styles/about-styles/about.scss
@@ -1,26 +1,259 @@
 @import "../variables";
+@import "../common-styles/header";
+@import "../common-styles/footer";
 
 /*Laptop media queries starts*/
+.wrapper-section {
+  background-image: url(../../images/Gallery/banner-image.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  .bg-layer {
+    background-color: #525151c0;
+    width: 100%;
+    height: 100vh;
+  }
+}
+
+//hero-section
+.hero-section {
+  padding-top: 80px;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  .container {
+    width: 70%;
+    margin: 0% auto;
+    height: inherit;
+    .flex-wrapper {
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h1 {
+        font-size: 65px;
+        font-weight: bolder;
+        margin-bottom: 58px;
+        color: $primary-one;
+        span {
+          color: $complementary-color;
+        }
+      }
+      h2 {
+        margin-bottom: 105px;
+        max-width: 900px;
+        text-align: center;
+        font-weight: 500;
+        line-height: 35px;
+        color: $primary-one;
+      }
+      .btn {
+        padding: 34px 58px;
+        background-color: $complementary-color;
+        color: $primary-one;
+        border-radius: 7px;
+        font-weight: bolder;
+        font-size: 15px;
+      }
+    }
+  }
+}
+
+//main-section
+.main-section {
+  background-color: $bg-color;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  .container {
+    width: 89%;
+    height: inherit;
+    margin: 0% auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    .top,
+    .bottom {
+      width: inherit;
+      height: 50%;
+      display: flex;
+      gap: 20px;
+      .left {
+        width: 50%;
+      }
+      .right {
+        width: 50%;
+      }
+    }
+    .top {
+      margin-bottom: 130px;
+      .left {
+        color: $primary-two;
+        h1 {
+          font-size: 25px;
+          font-weight: bolder;
+          margin-bottom: 35px;
+          span {
+            color: $complementary-color;
+          }
+        }
+        h2,
+        h3 {
+          max-width: 600px;
+          font-size: 15px;
+          font-weight: 500;
+          margin-bottom: 30px;
+          line-height: 25px;
+        }
+        h3 {
+          margin-bottom: 50px;
+        }
+        .btn {
+          padding-top: 35px;
+          width: 300px;
+          height: 58px;
+          padding: 20px 40px;
+          cursor: pointer;
+          font-size: 15px;
+          background-color: $complementary-color;
+          color: $primary-one;
+          font-weight: bolder;
+        }
+      }
+    }
+    .bottom {
+      color: $primary-two;
+      .left {
+        .ceo-image {
+          width: 500px;
+          height: 400px;
+          object-fit: cover;
+        }
+      }
+      .right {
+        color: $primary-two;
+        h1 {
+          font-size: 25px;
+          font-weight: bolder;
+          margin-bottom: 35px;
+          span {
+            color: $complementary-color;
+          }
+        }
+        h2,
+        h3 {
+          max-width: 600px;
+          font-size: 15px;
+          font-weight: 500;
+          margin-bottom: 30px;
+          line-height: 25px;
+        }
+        h3 {
+          margin-bottom: 50px;
+        }
+        .btn {
+          padding-top: 35px;
+          width: 300px;
+          height: 58px;
+          padding: 20px 40px;
+          cursor: pointer;
+          font-size: 15px;
+          background-color: $complementary-color;
+          color: $primary-one;
+          font-weight: bolder;
+        }
+      }
+      .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+
+        a {
+          img {
+            width: 45px;
+            height: 45px;
+            margin: 0px 12px;
+            cursor: pointer;
+            transition: 0.3s ease;
+          }
+          img:hover {
+            transform: translateY(-10px);
+          }
+        }
+      }
+    }
+  }
+}
 /*Laptop media queries ends*/
-
-
 
 /*Desktop Media Quries Starts*/
 @media only screen and (min-width: 1600px) {
-    
+  .wrapper-section {
+    height: 70vh;
+  }
+  .hero-section {
+    .container {
+      .flex-wrapper {
+        h1 {
+          font-size: 70px;
+        }
+        h2 {
+          max-width: 982px;
+          font-size: 26px;
+        }
+        .btn {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+  //main-section
+  .main-section {
+    .container {
+      .top,
+      .bottom {
+        .left,
+        .right {
+          h1 {
+            font-size: 28px;
+          }
+          h2,
+          h3 {
+            max-width: 661px;
+            font-size: 17px;
+
+            line-height: 29px;
+          }
+        }
+      }
+      .top {
+        .left {
+          .btn {
+            font-size: 17px;
+          }
+        }
+      }
+      .bottom{
+        .left{
+          .ceo-image{
+            width: 611px;
+            height: 387px;
+          }
+        }
+      }
+    }
+  }
 }
 /*Desktop Media Quries Ends*/
 
-
-
 /*Normal iphone 6 / x Starts*/
 @media (max-width: 400px) {
-
 }
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
 @media only screen and (min-width: 320px) and (max-width: 370px) {
-
 }
 /*Iphone se (Small devices) ends*/
