--- a/styles/common-styles/_footer.scss
+++ b/styles/common-styles/_footer.scss
@@ -56,15 +56,17 @@
         align-items: center;
         justify-content: center;
         width: 33.3%;
-        img {
-          width: 45px;
-          height: 45px;
-          margin: 0px 12px;
-          cursor: pointer;
-          transition: 0.3s ease;
-        }
-        img:hover {
-          transform: translateY(-10px);
+        a {
+          img {
+            width: 45px;
+            height: 45px;
+            margin: 0px 12px;
+            cursor: pointer;
+            transition: 0.3s ease;
+          }
+          img:hover {
+            transform: translateY(-10px);
+          }
         }
       }
     }
@@ -124,9 +126,11 @@
           }
         }
         .social-links {
-          img {
-            width: 50px;
-            height: 50px;
+          a {
+            img {
+              width: 50px;
+              height: 50px;
+            }
           }
         }
       }
@@ -151,3 +155,108 @@
     }
   }
 }
+
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .footer {
+    padding: 50px 0;
+    height: auto;
+    .container {
+      width: 95%;
+      .top {
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+        .logo {
+          margin-left: 0%;
+          padding-bottom: 35px;
+        }
+        .social-links {
+          padding-bottom: 35px;
+        }
+        .nav-links {
+          width: 100%;
+          justify-content: center;
+          padding-bottom: 35px;
+          li {
+            margin: 0 14px;
+            a {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+      .bottom {
+        flex-direction: column;
+        padding-top: 50px;
+        width: 100%;
+        height: 50%;
+        margin-left: 0%;
+        a {
+          font-size: 10px;
+        }
+        .wrapper {
+          align-items: stretch;
+          .card {
+            text-align: center;
+            justify-content: start;
+            img {
+              width: 32px;
+              height: 32px;
+              margin-bottom: 40px;
+            }
+            .special-image {
+              width: 35px;
+              height: 42px;
+              margin-bottom: 31px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+/*Normal iphone 6 / x ends*/
+
+/*Iphone se (Small devices) starts*/
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .footer {
+    .container {
+      .top {
+        .nav-links {
+          li {
+            margin: 0 8px;
+            a {
+              font-size: 14px;
+            }
+          }
+        }
+        .social-links {
+          a {
+            img {
+              width: 40px;
+              height: 40px;
+              margin: 0px 10px;
+            }
+          }
+        }
+      }
+      .bottom {
+        .wrapper {
+          .card {
+            img {
+              height: 41px;
+              margin-bottom: 33px;
+            }
+          }
+        }
+        a {
+          font-size: 9px;
+        }
+      }
+    }
+  }
+}
+
+/*Iphone se (Small devices) ends*/
