--- a/styles/common-styles/_header.scss
+++ b/styles/common-styles/_header.scss
@@ -24,20 +24,20 @@
         color: $complementary-color;
       }
     }
-    .handBurger{
-        color: black;
-        width: 25px;
-        height: 25px;
-        display: none;
+    .handBurger {
+      color: black;
+      width: 25px;
+      height: 25px;
+      display: none;
     }
     .nav-links {
       display: flex;
       align-items: center;
       li {
-        margin: 0 34px; 
-        a{
-            font-weight: bold;
-            color: $primary-one;
+        margin: 0 34px;
+        a {
+          font-weight: bold;
+          color: $primary-one;
         }
       }
       li.active {
@@ -51,19 +51,19 @@
 
 /*Desktop Media Quries Starts*/
 @media only screen and (min-width: 1600px) {
-  .header-section{
-    .container{
-      .logo{
-        a{
+  .header-section {
+    .container {
+      .logo {
+        a {
           font-size: 60px;
-          span{
+          span {
             font-size: 15px;
           }
         }
       }
-      .nav-links{
-        li{
-          a{
+      .nav-links {
+        li {
+          a {
             font-size: 21px;
           }
         }
@@ -73,3 +73,61 @@
 }
 
 /*Desktop Media Quries Ends*/
+
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .header-section {
+    width: 100%;
+    overflow: hidden;
+    .container {
+      width: 90%;
+      height: inherit;
+      .logo {
+        z-index: 3;
+        a {
+          font-size: 30px;
+          span {
+            font-size: 7px;
+          }
+        }
+      }
+      .handBurger {
+        display: block;
+        z-index: 3;
+      }
+      .nav-links {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        right: 0%;
+        bottom: 0%;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: $primary-two;
+        transform: translateX(100%);
+        opacity: 0;
+        transition: 0.3s ease-in-out;
+        z-index: 2;
+        padding: 61% 0 41%;
+        li.active {
+          padding: 0%;
+          background-color: black;
+        }
+      }
+      .nav-links.open {
+        opacity: 1;
+        transform: translateX(0);
+        z-index: 2;
+      }
+    }
+  }
+}
+/*Normal iphone 6 / x ends*/
+
+/*Iphone se (Small devices) starts*/
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+}
+/*Iphone se (Small devices) ends*/
