--- a/styles/contact-styles/contact.css
+++ b/styles/contact-styles/contact.css
@@ -173,6 +173,73 @@ img {
 }
 
 /*Desktop Media Quries Ends*/
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .header-section {
+    width: 100%;
+    overflow: hidden;
+  }
+  .header-section .container {
+    width: 90%;
+    height: inherit;
+  }
+  .header-section .container .logo {
+    z-index: 3;
+  }
+  .header-section .container .logo a {
+    font-size: 30px;
+  }
+  .header-section .container .logo a span {
+    font-size: 7px;
+  }
+  .header-section .container .handBurger {
+    display: block;
+    z-index: 3;
+  }
+  .header-section .container .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #000;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    opacity: 0;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    z-index: 2;
+    padding: 61% 0 41%;
+  }
+  .header-section .container .nav-links li.active {
+    padding: 0%;
+    background-color: black;
+  }
+  .header-section .container .nav-links.open {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    z-index: 2;
+  }
+}
+
+/*Normal iphone 6 / x ends*/
+/*Iphone se (Small devices) starts*/
+/*Iphone se (Small devices) ends*/
 /*Resets*/
 html,
 body {
@@ -312,7 +379,7 @@ img {
   width: 33.3%;
 }
 
-.footer .container .top .social-links img {
+.footer .container .top .social-links a img {
   width: 45px;
   height: 45px;
   margin: 0px 12px;
@@ -321,7 +388,7 @@ img {
   transition: 0.3s ease;
 }
 
-.footer .container .top .social-links img:hover {
+.footer .container .top .social-links a img:hover {
   -webkit-transform: translateY(-10px);
           transform: translateY(-10px);
 }
@@ -397,7 +464,7 @@ img {
   .footer .container .top .nav-links li a {
     font-size: 20px;
   }
-  .footer .container .top .social-links img {
+  .footer .container .top .social-links a img {
     width: 50px;
     height: 50px;
   }
@@ -417,6 +484,103 @@ img {
   }
 }
 
+/*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .footer {
+    padding: 50px 0;
+    height: auto;
+  }
+  .footer .container {
+    width: 95%;
+  }
+  .footer .container .top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    height: 50%;
+  }
+  .footer .container .top .logo {
+    margin-left: 0%;
+    padding-bottom: 35px;
+  }
+  .footer .container .top .social-links {
+    padding-bottom: 35px;
+  }
+  .footer .container .top .nav-links {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 35px;
+  }
+  .footer .container .top .nav-links li {
+    margin: 0 14px;
+  }
+  .footer .container .top .nav-links li a {
+    font-size: 14px;
+  }
+  .footer .container .bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 50px;
+    width: 100%;
+    height: 50%;
+    margin-left: 0%;
+  }
+  .footer .container .bottom a {
+    font-size: 10px;
+  }
+  .footer .container .bottom .wrapper {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .footer .container .bottom .wrapper .card {
+    text-align: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .footer .container .bottom .wrapper .card img {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 40px;
+  }
+  .footer .container .bottom .wrapper .card .special-image {
+    width: 35px;
+    height: 42px;
+    margin-bottom: 31px;
+  }
+}
+
+/*Normal iphone 6 / x ends*/
+/*Iphone se (Small devices) starts*/
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .footer .container .top .nav-links li {
+    margin: 0 8px;
+  }
+  .footer .container .top .nav-links li a {
+    font-size: 14px;
+  }
+  .footer .container .top .social-links a img {
+    width: 40px;
+    height: 40px;
+    margin: 0px 10px;
+  }
+  .footer .container .bottom .wrapper .card img {
+    height: 41px;
+    margin-bottom: 33px;
+  }
+  .footer .container .bottom a {
+    font-size: 9px;
+  }
+}
+
+/*Iphone se (Small devices) ends*/
 /*Laptop media queries starts*/
 .wrapper-section {
   background-image: url(../../images/Gallery/banner-image.jpeg);
@@ -591,11 +755,23 @@ img {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .contact-section .conatiner .right {
+    margin-top: 4%;
+  }
   .contact-section .conatiner .left h1 {
     font-size: 40px;
   }
   .contact-section .conatiner .left h2 {
     font-size: 20px;
+  }
+  .contact-section .conatiner .left form .first input {
+    width: 300px;
+  }
+  .contact-section .conatiner .left form .second input {
+    width: 628px;
+  }
+  .contact-section .conatiner .left form .third input {
+    width: 637px;
   }
   .contact-section .conatiner .left form .btn {
     width: 239px;
@@ -609,7 +785,92 @@ img {
 
 /*Desktop Media Quries Ends*/
 /*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .wrapper-section {
+    height: auto;
+  }
+  .wrapper-section .bg-layer {
+    height: auto;
+  }
+  .hero-section {
+    height: auto;
+    padding: 80px 0;
+  }
+  .hero-section .container {
+    width: 89%;
+  }
+  .hero-section .container .flex-wrapper h1 {
+    font-size: 32px;
+  }
+  .hero-section .container .flex-wrapper h2 {
+    font-size: 17px;
+    line-height: 25px;
+    margin-bottom: 38px;
+  }
+  .hero-section .container .flex-wrapper .btn {
+    padding: 24px 22px;
+    font-size: 12px;
+  }
+  .contact-section {
+    height: auto;
+  }
+  .contact-section .conatiner {
+    width: 90%;
+    margin: 0% auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-section .conatiner .left,
+  .contact-section .conatiner .right {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact-section .conatiner .left {
+    margin-bottom: 50px;
+  }
+  .contact-section .conatiner .left h1 {
+    margin-bottom: 20px;
+  }
+  .contact-section .conatiner .left h2 {
+    font-size: 18px;
+    margin-bottom: 28px;
+  }
+  .contact-section .conatiner .left form .first {
+    gap: 0px 12px;
+  }
+  .contact-section .conatiner .left form .first input {
+    width: 50%;
+  }
+  .contact-section .conatiner .left form .second input,
+  .contact-section .conatiner .left form .third input {
+    width: 100%;
+  }
+  .contact-section .conatiner .right iframe {
+    width: 100%;
+  }
+}
+
 /*Normal iphone 6 / x ends*/
 /*Iphone se (Small devices) starts*/
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .hero-section .conatiner .flex-wrapper h2 {
+    font-size: 14px;
+  }
+  .hero-section .conatiner .flex-wrapper .btn {
+    padding: 17px 19px;
+    font-size: 10px;
+  }
+}
+
 /*Iphone se (Small devices) ends*/
 /*# sourceMappingURL=contact.css.map */
