--- a/styles/contact-styles/contact.scss
+++ b/styles/contact-styles/contact.scss
@@ -144,40 +144,144 @@
     height: 70vh;
   }
   //contact section
-  .contact-section{
-      height: 85vh;
-      .conatiner{
-          width: 85%;
-          justify-content: center;
-        .left{
-            h1{
-                font-size: 40px;
-            }
-            h2{
-                font-size: 20px;
-            }
-            form{
-                .btn{
-                    width: 239px;
-                    font-size: 16px;
-                    font-weight: bolder;
-                }
-            }
-        }
-          .right{
-            width: 42%;
-          }
+  .contact-section {
+    height: 85vh;
+    .conatiner {
+      width: 85%;
+      justify-content: center;
+      .right {
+        margin-top: 4%;
       }
+      .left {
+        h1 {
+          font-size: 40px;
+        }
+        h2 {
+          font-size: 20px;
+        }
+        form {
+          .first {
+            input {
+              width: 300px;
+            }
+          }
+          .second {
+            input {
+              width: 628px;
+            }
+          }
+          .third {
+            input {
+              width: 637px;
+            }
+          }
+          .btn {
+            width: 239px;
+            font-size: 16px;
+            font-weight: bolder;
+          }
+        }
+      }
+      .right {
+        width: 42%;
+      }
+    }
   }
 }
 /*Desktop Media Quries Ends*/
 
 /*Normal iphone 6 / x Starts*/
 @media (max-width: 400px) {
+  .wrapper-section {
+    height: auto;
+    .bg-layer {
+      height: auto;
+    }
+  }
+  .hero-section {
+    height: auto;
+    padding: 80px 0;
+    .container {
+      width: 89%;
+      .flex-wrapper {
+        h1 {
+          font-size: 32px;
+        }
+        h2 {
+          font-size: 17px;
+          line-height: 25px;
+          margin-bottom: 38px;
+        }
+        .btn {
+          padding: 24px 22px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+  //contact-sec
+  .contact-section {
+    height: auto;
+    .conatiner {
+      width: 90%;
+      margin: 0% auto;
+      flex-direction: column;
+      .left,
+      .right {
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        justify-items: center;
+        align-items: center;
+      }
+      .left {
+        margin-bottom: 50px;
+        h1 {
+          margin-bottom: 20px;
+        }
+        h2 {
+          font-size: 18px;
+          margin-bottom: 28px;
+        }
+        form {
+          .first {
+            gap: 0px 12px;
+            input{
+              width: 50%;
+            }
+          }
+          .second,
+          .third {
+            input {
+              width: 100%;
+            }
+          }
+        }
+      }
+      .right {
+        iframe {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
 @media only screen and (min-width: 320px) and (max-width: 370px) {
+  .hero-section{
+    .conatiner{
+      .flex-wrapper{
+        h2{
+          font-size: 14px;
+        }
+        .btn{
+          padding: 17px 19px;
+          font-size: 10px;
+        }
+      }
+    }
+  }
 }
 /*Iphone se (Small devices) ends*/
